fix links and align

--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ div#editor {
   border: 1px solid #999;
   background-color: white;
   max-height: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 #toolbar button {
